{{$NEXT}}

1.302068  2016-12-03 13:50:01-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add TO_JSON and from_json methods to Test2::Event and Test2::Trace::Util
      to faciliate transferring event data between processes. Implemented by
      Dave Rolsky. (#741).

1.302067  2016-11-23 07:37:56-08:00 America/Los_Angeles

    - Fix context test for recent blead.

1.302066  2016-11-08 07:58:39-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Handle cases where SysV IPC can be available but not enabled
    - Import 'context' into Test2::IPC, it is used by 'cull'
    - Propogate warnings settings to use_ok (#736)

1.302065  2016-10-30 11:54:37-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Set the TEST_ACTIVE env var to true
    - Set the TEST2_ACTIVE env var to true
    - Fix the oldest bug still in the bug list (#6)
      This fixes cmp_ok output is some confusing cases
    - Update travis config
    - Add missing author deps
    - Fix handling of negative pid's on windows
    - Add can() to Test::Tester::Delegate (despite deprecation)
    - Fix some minor test issues

1.302064  2016-10-24 21:03:24-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Repo management improvements
    - Better handling of info vs diag in ->send_event
    - Fix test that used 'parent'
    - Better handling of non-bumping failures (#728)

1.302063  2016-10-23 21:31:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix double release when 'throw' is used in context_do()

1.302062  2016-10-20 06:16:08-07:00 America/Los_Angeles

    - No changes from last trial

1.302061  2016-09-30 14:49:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Removed a warning when using a non-TAP formatter with Test::Builder
      about the formatter not "no_header" and "no_diag". This happened even if
      the alternative formatter class implemented these attributes.
    - When finalize is called on a formatter, it now receives one more